app/public/css/style.css
.jumbotron {
    padding: 0.5em 0.6em;
    h1 {
        font-size: 2em;
    }
    p {
        font-size: 1.2em;
        .btn {
            padding: 0.5em;
        }
    }
}
#msgInput{
    border:0;padding:10px;background:whitesmoke;
}
#addGrpInput{
    border:0;padding:10px;background:whitesmoke;
}
.text{
    width:75%;display:flex;flex-direction:column;
}
.contact{
    float:left;background:white;
}
#msgGroupActions{
    margin-left:auto;
}
#msgHead{
    position:absolute;top:0;width:100%;display:flex;border:0;background:whitesmoke;float:left;
}
.msgName{
    width:100%;margin-top:0;margin-bottom:auto;line-height: 13px;font-size: 12px;
}
.msgText{
    width:100%;margin-top:0;margin-bottom:auto;line-height: 13px;font-size: 12px;
}
.ntfText{
    width:100%;margin-top:0;margin-bottom:auto;line-height: 13px;font-size: 12px;
}
.msgUser{
   width:100%;text-align:right;color:silver;margin-bottom:-7px;margin-top:auto;
}
.msgDate{
   width:100%;text-align:right;color:silver;margin-bottom:-7px;margin-top:auto;
}
.text-m{
    float:right;left:-50%;
}
.text-l{
    float:left;padding-right:10px;
}        
.text-r{
    float:right;padding-left:10px;
}
.avatar{
    display:flex;
    justify-content:center;
    align-items:center;
    width:25%;
    float:left;
    padding-right:10px;
}
.macro{
    margin-top:5px;width:85%;border-radius:5px;padding:5px;display:flex;overflow:auto;
}
.ntf{
    float:right;left:-50%;background:silver;
}
.msj-rta{
    float:right;background:whitesmoke;
}
.msj{
    float:left;background:white;
}
.frame{
    background:#e0e0de;
    height:450px;
    overflow:hidden;
    padding:0;
}
#sendMsgContainer{
    position:absolute;bottom:0;width:100%;display:flex;
}
#addGrpContainer{
    position:absolute;bottom:0;width:100%;display:flex;
}
.cccButton{
    background: whitesmoke;padding: 10px;font-size: 21px;border-radius: 50%;
}
.groupAdd{
    margin-left:auto;
}
#createGrp{
    margin:auto;margin-left:1%;
}
#sendCntrl{
    margin:auto;margin-left:1%;
}
.contacts{
    margin-top: 40px;
    bottom: 0px;
    overflow-y:scroll;
}
.chats{
    margin-top: 40px;
    bottom: 0px;
    overflow-y:scroll;
}
#modalList{
    margin-top: 40px;
    bottom: 0px;
    overflow-y:scroll;
}
.cul{
    width:100%;
    list-style-type: none;
    padding:18px;
    position:absolute;
    display:flex;
    flex-direction: column;
    overflow-y:scroll;
    bottom:52px;
    top:52px;
}
.msj:before{
    width: 0;
    height: 0;
    content:"";
    top:-5px;
    left:-14px;
    position:relative;
    border-style: solid;
    border-width: 0 13px 13px 0;
    border-color: transparent #ffffff transparent transparent;            
}
.msj-rta:after{
    width: 0;
    height: 0;
    content:"";
    top:-5px;
    left:14px;
    position:relative;
    border-style: solid;
    border-width: 13px 13px 0 0;
    border-color: whitesmoke transparent transparent transparent;           
}  
input:focus{
    outline: none;
}        
::-webkit-input-placeholder { /* Chrome/Opera/Safari */
    color: #d4d4d4;
}
::-moz-placeholder { /* Firefox 19+ */
    color: #d4d4d4;
}
:-ms-input-placeholder { /* IE 10+ */
    color: #d4d4d4;
}
:-moz-placeholder { /* Firefox 18- */
    color: #d4d4d4;
}  

